# MapViewer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.d4d2d94  DataLoader.cpp  DataLoader.h  config.h  draw_manager.cpp  draw_manager.h  main.cpp  mapWidgetNew.txt  planet_61.598,56.281_62.324,56.532.osm.xz
database/: output5.sqlite  outputNewEpsilon2.sqlite  outputShorter.sqlite  outputWKB.sqlite  outputWKB_win10.sqlite  outputWKB_win10v2.sqlite
widgets/: checkbox.cpp  checkbox.h  mapwidget.cpp  mapwidget.h
